--- a/cgpa.html
+++ b/cgpa.html
@@ -29,7 +29,7 @@
             <input class="btn" type="submit" value="Calculate Percentage" >
         </form>
 
-        <p id="per">Answer</p>
+        <p id="per">check your answer here </p>
 
 
     </section>
@@ -47,6 +47,9 @@
         <ul class="list">
             <li class="items">
                 <a href="index.html"> Modulo Calculator</a>
+            </li>
+           <li class="items">
+                <a href="average.html">Average Calculator</a>
             </li>
         </ul>
     </aside>
