--- a/average.html
+++ b/average.html
@@ -17,22 +17,22 @@
 
     <section class="container">
         <form id="my-form">
-            <h2>Modulo Calculator </h2>
+            <h2>Average Calculator </h2>
             <div class="msg"></div>
 
             <div>
-                <label for="Enter-value-a"><h4>Enter 1 <sup>st</sup> Number : </h4></label>
-                <input type="number" id="Enter-value-a" placeholder="Enter Number">
+                <label for="Entera"><h4>Enter 1 <sup>st</sup> Number : </h4></label>
+                <input type="number" step="0.01" id="Entera" placeholder="Enter Number">
             </div>
 
             <div>
-                <label for="Enter-value-b"><h4>Enter 2 <sup>nd</sup> Number :</h4></label>
-                <input type="number" id="Enter-value-b" placeholder="Enter Number">
+                <label for="Enterb"><h4>Enter 2 <sup>nd</sup> Number :</h4></label>
+                <input type="number" step="0.01" id="Enterb" placeholder="Enter Number">
             </div>
-            <input class="btn" type="submit" value="Calculate Modulo" >
+            <input class="btn" type="submit" value="Calculate Average" >
         </form>
 
-        <p id="ans">check your answer here </p>
+        <p id="ans-avg">check your answer here </p>
 
 
     </section>
@@ -54,13 +54,12 @@
                 <a href="cgpa.html">CGPA to Percentage Calculator</a>
             </li>
             <li class="items">
-                <a href="average.html">Average Calculator</a>
+                <a href="index.html">Modulo Calculator</a>
             </li>
-            
         </ul>
     </aside>
 </div>
-    <script src="script.js"></script>
+    <script src="avg.js"></script>
 
 
 </body>
