sqr finder added

--- a/cgpa.html
+++ b/cgpa.html
@@ -51,6 +51,9 @@
            <li class="items">
                 <a href="average.html">Average Calculator</a>
             </li>
+            <li class="items">
+                <a href="sqr.html">Square Finder</a>
+            </li>
         </ul>
     </aside>
 
