--- a/average.html
+++ b/average.html
@@ -54,7 +54,7 @@
                 <a href="cgpa.html">CGPA to Percentage Calculator</a>
             </li>
             <li class="items">
-                <a href="index.html">Modulo Calculator</a>
+                <a href="mod.html">Modulo Calculator</a>
             </li>
             <li class="items">
                 <a href="sqr.html">Square Finder</a>
