--- a/cgpa.html
+++ b/cgpa.html
@@ -46,7 +46,7 @@
     <aside class="as">
         <ul class="list">
             <li class="items">
-                <a href="index.html"> Modulo Calculator</a>
+                <a href="mod.html"> Modulo Calculator</a>
             </li>
            <li class="items">
                 <a href="average.html">Average Calculator</a>
