--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Calculator Tools</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Mini Calculator Tools</h1>
     </header>
+
+    <a href="mod.html">
+    <button id="st" value="onclick" class="button">
+        See All Tools
+    </button>
+    </a>
+
+    <div class="vec-img">
+        <img src="./Untitled-3.jpg" alt="">
+    </div>
     
 
     <script src="main.js"></script>
