--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Mini Calculator Tools</h1>
-    </header>
+    
+    <a class="button" href="mod.html">  See All Tools</a> 
 
-    <a href="mod.html">
-    <button id="st" value="onclick" class="button">
-        See All Tools
-    </button>
-    </a>
 
-    <div class="vec-img">
-        <img src="./Untitled-3.jpg" alt="">
-    </div>
+    <!-- <div class="vec-img">
+        <img src="./bg_main.png" alt="">
+    </div> -->
     
 
     <script src="main.js"></script>
