--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-    <a class="button" href="mod.html">  See All Tools</a> 
+
+    <a class="button" href="mod.html">SEE ALL TOOLS</a> 
 
 
     <!-- <div class="vec-img">
