--- a/mod.html
+++ b/mod.html
@@ -59,6 +59,9 @@
             <li class="items">
                 <a href="sqr.html">Square Finder</a>
             </li>
+            <li class="items">
+                <a href="tempconverter.html">Temperature Converter</a>
+            </li>
             
         </ul>
     </aside>
