--- a/sqr.html
+++ b/sqr.html
@@ -54,6 +54,9 @@
             <li class="items">
                 <a href="cgpa.html">CGPA to Percentage Calculator</a>
             </li>
+            <li class="items">
+                <a href="tempconverter.html">Temperature Converter</a>
+            </li>
         </ul>
     </aside>
 
