--- a/tempconverter.html
+++ b/tempconverter.html
@@ -17,19 +17,19 @@
 
     <section class="container">
         <form id="my-form">
-            <h2>CGPA to Percentage Calculator </h2>
+            <h2>Temperature Converter(F to <sup>o</sup>C)</h2>
             <div class="msg"></div>
 
             <div>
-                <label for="Enter-cgpa"><h4>Enter CGPA : </h4></label>
-                <input type="number" step="0.01" id="Enter-cgpa" placeholder="Enter Number">
+                <label for="Enter-temp"><h4>Enter Temperature in Fahrenhiet  : </h4></label>
+                <input type="number" step="0.01" id="Enter-temp" placeholder="Enter Temperature in Fahrenhiet">
             </div>
 
             
-            <input class="btn" type="submit" value="Calculate Percentage" >
+            <input class="btn" type="submit" value="Convert to Celsius" >
         </form>
 
-        <p id="per">check your answer here </p>
+        <p id="temp">check your answer here </p>
 
 
     </section>
@@ -55,13 +55,12 @@
                 <a href="sqr.html">Square Finder</a>
             </li>
             <li class="items">
-                <a href="tempconverter.html">Temperature Converter</a>
-            </li>
+                <a href="cgpa.html">CGPA to Percentage Converter
         </ul>
     </aside>
 
 
-    <script src="scgpa.js"></script>
+    <script src="tempconverter.js"></script>
 
 
 </body>
